--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,7 @@ upload_speed = 460800
 monitor_speed = 115200
 board_build.filesystem = littlefs
 lib_deps =
+    fastled/FastLED@^3.5.0
 monitor_flags =
     --echo
     --eol
